# oaur

./: .gitignore  .ocamlformat  Dockerfile  README.md  dune-project  oaur.opam  paste.ml  result  todo.md
lib/: 2  aur.ml  build.ml  chroot.ml  commands.ml  depends.ml  dune  errors.ml  repo.ml  utils.ml
test/: dune  test_oaur.ml
